fix overall layout spacing

--- a/upsurge/src/pages/for-you.module.css
+++ b/upsurge/src/pages/for-you.module.css
@@ -1,7 +1,8 @@
 .grid {
   display: grid;
   grid-template-columns: 2fr 1fr 2fr;
-  grid-template-rows: repeat(10, 1fr 3fr);
+  /* 11 rows but 4*2 in template rows, having less is safe not to have empty rows */
+  grid-template-rows: repeat(4, 1fr 3fr);
   grid-template-areas:
     'A . .'
     'A . .'
@@ -19,7 +20,7 @@
 @media screen and (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: repeat(10, 5fr 1fr);
+    grid-template-rows: repeat(4, 3fr 1fr);
     grid-template-areas:
       'A A .'
       'a . .'
